    Herrmann.  (Closes: #787276)
  * uscan:
    + Fix Github example in man page.  (Closes: #757194)
    + Clear cached redirection URLs every time a watch line is processed.
      This ensures any relative URLs are built into absolute URLs using
      relevant sites.  (Closes: #736063)
  * Devscripts::Debbugs: Retrieve bug status in chunks to avoid building large
    responses on bugs.d.o.

  [ Dominique Dumont ]
  * licensecheck:
    * check file encoding and decode properly when reading file
     (Closes: #784821)
    * improve GPL LGPL extraction
    * optimize regex used to extract © info
    * check Groovy, Scala and Clojure files (Closes: #771119)
    * fixed regexp used to detect discussion about © (Closes: #723723)
    * fix BSL parser (Closes: #690375)
    * support academic free license (Closes: #534987)
    * allow © owner to mention "and others"
    * support eclipse public license (Closes: #587892)
    * handle LGPL as written by IBM (Closes: #587970)
    * handle REM style comments (Closes: #748611)
  * uscan: use defined-or (//) instead of "||" to avoid loosing
    '0' version field (Closes: #787767)

  [ Piotr Ożarowski ]
  * uscan: Use pypi.debian.net redirector instead of
    pypi.debian.org/packages/source URLs.  (Closes: #785746)

  [ Hideki Yamane ]
  * Add bash completion for dcut.  (Closes: #787321)

  [ Craig Small ]
  * debdiff: Honor DEBRELEASE_DEBS_DIR or --debs-dir.  (Closes: #785421)

 -- Cyril Brulebois <kibi@debian.org>  Tue, 28 Apr 2015 16:58:36 +0200

devscripts (2.15.4) unstable; urgency=medium

  [ Dominique Dumont ]
  * licensecheck:
    + Handle license like GPL version 2 or 3 (which is not GPL-2+)
    + Ignore .pc directories
    + print copyrights in a non random-order

  [ Daniel Kahn Gillmor ]
  * uscan: explicitly dearmor, rather than --import upstream signing key
    (Closes: #768345)

  [ James McCoy ]
  * debsnap: When specified version or architectures aren't available, warn